--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "gattc_gatts_coex.c"
+idf_component_register(SRCS "gattc_gatts_coex.c" "tcp_server.c"
                     INCLUDE_DIRS  ".")
