--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,4 @@
-idf_component_register(SRCS "gattc_gatts_coex.c" "tcp_server.c"
-                    INCLUDE_DIRS  ".")
+idf_component_register(SRCS "app_main.c" 
+                    INCLUDE_DIRS  "."
+                    REQUIRES user_gpio user_wifi user_sdio user_ble
+                    )
