--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,14 @@
     "slc_struct.h": "c",
     "freertos.h": "c",
     "task.h": "c",
-    "event_groups.h": "c"
+    "event_groups.h": "c",
+    "optional": "c",
+    "istream": "c",
+    "ostream": "c",
+    "ratio": "c",
+    "system_error": "c",
+    "functional": "c",
+    "tuple": "c",
+    "type_traits": "c"
   }
 }
