--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,8 @@
     "system_error": "c",
     "functional": "c",
     "tuple": "c",
-    "type_traits": "c"
+    "type_traits": "c",
+    "string": "c",
+    "complex": "c"
   }
 }
