--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "app_main.c" 
+idf_component_register(SRCS "wifi_task.c" "uart_task.c" "key_task.c" "app_main.c" 
                     INCLUDE_DIRS  "."
-                    REQUIRES user_gpio user_wifi user_sdio user_ble
+                    REQUIRES  comp_wifi comp_sdio comp_ble
                     )
