--- a/components/comp_sdio/CMakeLists.txt
+++ b/components/comp_sdio/CMakeLists.txt
@@ -1,3 +1,3 @@
-#idf_component_register(SRCS "comp_sdio.c"
-#                    INCLUDE_DIRS "include"
-#                    REQUIRES nvs_flash)
+idf_component_register(SRCS "comp_sdio.c"
+                    INCLUDE_DIRS "include"
+                    REQUIRES nvs_flash)
