修改手机断开 本体断开bug

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,7 @@
     "semphr.h": "c",
     "esp_log.h": "c",
     "comp_wifi.h": "c",
-    "esp_event.h": "c"
+    "esp_event.h": "c",
+    "sstream": "c"
   }
 }
